--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/compiler": "^17.3.1",
     "@angular/core": "^17.3.1",
     "@angular/fire": "^17.0.1",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.3.1",
     "@angular/language-service": "^17.3.1",
     "@angular/material": "github:angular/material2-builds",
@@ -46,6 +47,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ngx-infinite-scroll": "^18.0.0",
     "ngx-scrollbar": "^13.0.3",
     "ngx-skeleton-loader": "^9.0.0",
     "ngx-toastr": "^18.0.0",
